[gd_scene load_steps=6 format=3 uid="uid://y2iscrkvsonm"]

[ext_resource type="PackedScene" uid="uid://j2jy5p1ojh58" path="res://addons/macchi's_gui_manager/nodes/gui/gui/gui.tscn" id="1_jq4ma"]
[ext_resource type="Script" path="res://nodes/gui/player_hud/player_hud.gd" id="2_3hk1a"]
[ext_resource type="PackedScene" uid="uid://53yheb41dh24" path="res://nodes/gui/inventory_gui/inventory_gui.tscn" id="2_j6f2o"]
[ext_resource type="PackedScene" uid="uid://du6p4swgv5hfd" path="res://nodes/gui/navbar_gui/navbar_gui.tscn" id="3_iydx5"]
[ext_resource type="PackedScene" uid="uid://bvqcvxujyci1a" path="res://nodes/gui/quests_menu/quests_menu.tscn" id="5_tgs0x"]

[node name="PlayerHUD" node_paths=PackedStringArray("inventory_gui", "navbar_gui", "quests_menu") instance=ExtResource("1_jq4ma")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_3hk1a")
inventory_gui = NodePath("MarginContainer/Control/InventoryGUI")
navbar_gui = NodePath("MarginContainer/Control/NavbarGUI")
quests_menu = NodePath("MarginContainer/Control/QuestsMenu")
inactive_on_ready = false

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="Control" type="Control" parent="MarginContainer" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="NavbarGUI" parent="MarginContainer/Control" index="0" instance=ExtResource("3_iydx5")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -581.0
offset_right = -581.0
grow_horizontal = 0

[node name="InventoryGUI" parent="MarginContainer/Control" index="1" instance=ExtResource("2_j6f2o")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -151.0
offset_bottom = -151.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="QuestsMenu" parent="MarginContainer/Control" index="2" instance=ExtResource("5_tgs0x")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -190.0
offset_top = 162.0
offset_right = -190.0
offset_bottom = 162.0
grow_horizontal = 0
